@@ -1,11 +1,0 @@
-#!/usr/bin/env python3
-
-from hellolib import hello
-
-
-def main():
-    hello("App1")
-
-
-if __name__ == "__main__":
-    main()
